# ProjetoFinal-PosGraduacaoEngenhariaFinanceira

./: Ciclo1.txt  Ciclo2.txt  Ciclo3.txt  Ciclo4.txt  Ciclo5.txt  Halving_Cycles.ipynb  LR_insurance_data.ipynb  MLR_Data_Preprocessing.ipynb  MLR_Regression.ipynb  MLR_Results_Ciclo3.txt  MLR_Results_Ciclo5.txt  Models_results.xlsx  OLS_Data_Preprocessing.ipynb  OLS_Results_Ciclo1.txt  OLS_Results_Ciclo2.txt  OLS_regression.ipynb  README.md  Time Series Data Preprocessing copy.ipynb  Time Series Data Preprocessing.ipynb  V4_MLR_Data_Preprocessing.ipynb  V4_MLR_Regression.ipynb  V4_MLR_Results_Ciclo1.txt  V4_MLR_Results_Ciclo2.txt  V4_MLR_Results_Ciclo3.txt  V4_MLR_Results_Ciclo4.txt  VAR Model.ipynb  VAR_Model_post_covid.ipynb  VAR_Model_pre_covid.ipynb  VECM_data_df_full.csv  VECM_example.ipynb  VECM_model.ipynb  bitcoin_distribution_nakamoto_swan_research.ipynb  ciclo1_df.csv  ciclo2_df.csv  ciclo3_df.csv  ciclo4_df.csv  ciclo5_df.csv  correlation_matrix.csv  daily_cumulative_df.csv  daily_periodic_df.csv  (+31 more)
Indicadores_data/: 10y-2y_usa.csv  PMI_EURO-AREA.csv  PMI_USA.csv  ['EURUSD=X', 'JPYUSD=X', 'JPYEUR=X']_quotes_mensal.csv  ['SPY', 'QQQ', 'EXSA.DE', 'JPXN']_quotes_mensal.csv  balancesheet_global.csv  gdp_usa.csv  inflacao_Japan.csv  inflacao_usa.csv
V5_MLR/: V4_MLR_Data_Preprocessing.ipynb  V5_MLR_Regression.ipynb  correlation_matrix.csv  descriptive_analysis.csv  df_ciclo1_weekly.csv  df_ciclo2_weekly.csv  df_ciclo3_weekly.csv  df_ciclo4_weekly.csv  df_ciclo5_weekly.csv  df_daily.csv  (+2 more)
scrape_tradingEconomics/: pyproject.toml  requirements.txt  scrape.py
(+58 files in other folders)
